[package]
name = "sensor"
version = "0.1.0"
edition = "2021"
authors = ["Fayel MOHAMED <fayel.mohamed1@gmail.com>"]

[dependencies]
anyhow = "1.0.97"
askama = {version="0.14.0",features=["derive","alloc"]}
async-stream = "0.3.6"
axum = {version="0.8.3",features=["macros"]}
futures = "0.3.31"
serde = {version ="1.0.219",features = ["derive"]}
serde_json = "1.0.140"
tokio = {version="1.44.1",features=["full","macros","sync"]}
tokio-serial = "5.4.5"
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors"] }
